[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/block_empty.png" type="Texture" id=1]
[ext_resource path="res://sprites/mountain_big.png" type="Texture" id=2]
[ext_resource path="res://sprites/pipe.png" type="Texture" id=3]
[ext_resource path="res://sprites/brick_blue.png" type="Texture" id=4]
[ext_resource path="res://sprites/cloud.png" type="Texture" id=5]
[ext_resource path="res://sprites/brick.png" type="Texture" id=6]
[ext_resource path="res://sprites/block.png" type="Texture" id=7]
[ext_resource path="res://sprites/ground_blue.png" type="Texture" id=8]
[ext_resource path="res://sprites/bush.png" type="Texture" id=9]
[ext_resource path="res://sprites/ground.png" type="Texture" id=10]
[ext_resource path="res://scripts/Player.gd" type="Script" id=11]
[ext_resource path="res://scripts/Level_1-2.gd" type="Script" id=12]
[ext_resource path="res://sprites/background_sky.png" type="Texture" id=13]
[ext_resource path="res://sprites/mario.png" type="Texture" id=14]
[ext_resource path="res://sprites/mario_big.png" type="Texture" id=15]
[ext_resource path="res://SFX/Sounds/smb_jump-super.wav" type="AudioStream" id=16]
[ext_resource path="res://SFX/Sounds/smb_pipe.wav" type="AudioStream" id=17]
[ext_resource path="res://SFX/Sounds/smb_jump-small.wav" type="AudioStream" id=18]
[ext_resource path="res://scripts/PlayerState.gd" type="Script" id=19]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=9]
0/name = "block.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "brick.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "ground.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "pipe.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "brick.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "brick_blue.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "ground_blue.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "block_empty.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "cloud.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "mountain_big.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 80, 48 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "bush.png 10"
10/texture = ExtResource( 9 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="CircleShape2D" id=10]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.0
height = 16.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 7, 2 )

[sub_resource type="Animation" id=13]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -48 ), Vector2( 0, 256 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 64 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25098 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BigSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -10, 0 ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("../BigSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 32, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 32, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -10, 0 ]
}

[node name="Level_1-2" type="Node2D"]
script = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 9 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( 65536, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 5, 0, 65563, 5, 0, 65564, 5, 0, 65565, 5, 0, 65566, 5, 0, 65586, 5, 0, 65587, 5, 0, 65588, 5, 0, 65589, 5, 0, 65590, 5, 0, 65591, 5, 0, 65592, 5, 0, 65593, 5, 0, 65594, 5, 0, 65595, 5, 0, 65596, 5, 0, 65597, 5, 0, 65598, 5, 0, 65599, 5, 0, 65600, 5, 0, 65601, 5, 0, 65602, 5, 0, 65603, 5, 0, 65604, 5, 0, 65605, 5, 0, 65606, 5, 0, 65607, 5, 0, 65608, 5, 0, 65609, 5, 0, 65610, 5, 0, 65611, 5, 0, 65612, 5, 0, 65613, 5, 0, 65614, 5, 0, 65615, 5, 0, 131072, 5, 0, 131132, 5, 0, 131133, 5, 0, 131136, 5, 0, 131137, 5, 0, 131138, 5, 0, 131139, 5, 0, 131140, 5, 0, 131141, 5, 0, 131142, 5, 0, 131143, 5, 0, 131144, 5, 0, 131145, 5, 0, 131146, 5, 0, 131147, 5, 0, 196608, 5, 0, 196668, 5, 0, 196669, 5, 0, 196672, 5, 0, 196673, 5, 0, 196674, 5, 0, 196675, 5, 0, 196676, 5, 0, 196677, 5, 0, 196678, 5, 0, 196679, 5, 0, 196680, 5, 0, 196681, 5, 0, 196682, 5, 0, 196683, 5, 0, 262144, 5, 0, 262202, 5, 0, 262203, 5, 0, 262212, 5, 0, 262213, 5, 0, 262214, 5, 0, 262215, 5, 0, 262216, 5, 0, 262217, 5, 0, 262218, 5, 0, 262219, 5, 0, 327680, 5, 0, 327738, 5, 0, 327739, 5, 0, 327748, 5, 0, 327749, 5, 0, 327750, 5, 0, 327751, 5, 0, 327752, 5, 0, 327753, 5, 0, 327754, 5, 0, 327755, 5, 0, 393216, 5, 0, 393274, 5, 0, 393275, 5, 0, 393284, 5, 0, 393285, 5, 0, 393286, 5, 0, 393287, 5, 0, 393288, 5, 0, 393289, 5, 0, 393290, 5, 0, 393291, 5, 0, 458752, 5, 0, 458793, 5, 0, 458795, 5, 0, 458796, 5, 0, 458797, 5, 0, 458798, 5, 0, 458799, 5, 0, 458801, 5, 0, 458810, 5, 0, 458811, 5, 0, 458820, 5, 0, 458821, 5, 0, 458822, 5, 0, 458823, 5, 0, 458824, 5, 0, 458825, 5, 0, 458826, 5, 0, 458827, 5, 0, 524288, 5, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524312, 7, 0, 524314, 7, 0, 524318, 5, 0, 524329, 5, 0, 524331, 5, 0, 524335, 5, 0, 524337, 5, 0, 524346, 5, 0, 524347, 5, 0, 524356, 5, 0, 524357, 5, 0, 524358, 5, 0, 524359, 5, 0, 524360, 5, 0, 524361, 5, 0, 524362, 5, 0, 524363, 5, 0, 589824, 5, 0, 589846, 7, 0, 589848, 7, 0, 589850, 7, 0, 589852, 7, 0, 589856, 7, 0, 589865, 5, 0, 589866, 5, 0, 589867, 5, 0, 589871, 5, 0, 589872, 5, 0, 589873, 5, 0, 589882, 5, 0, 589883, 5, 0, 589892, 5, 0, 589893, 5, 0, 589894, 5, 0, 589895, 5, 0, 589896, 5, 0, 589897, 5, 0, 589898, 5, 0, 589899, 5, 0, 655360, 5, 0, 655380, 7, 0, 655382, 7, 0, 655384, 7, 0, 655386, 7, 0, 655388, 7, 0, 655392, 7, 0, 655394, 7, 0, 655418, 5, 0, 655419, 5, 0, 655420, 5, 0, 655421, 5, 0, 655424, 5, 0, 655425, 5, 0, 655426, 5, 0, 655427, 5, 0, 655428, 5, 0, 655429, 5, 0, 655430, 5, 0, 655431, 5, 0, 655432, 5, 0, 655433, 5, 0, 655434, 5, 0, 655435, 5, 0, 720896, 5, 0, 720914, 7, 0, 720916, 7, 0, 720918, 7, 0, 720920, 7, 0, 720922, 7, 0, 720924, 7, 0, 720928, 7, 0, 720930, 7, 0, 720956, 5, 0, 720957, 5, 0, 786432, 6, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 6, 0, 786437, 6, 0, 786438, 6, 0, 786439, 6, 0, 786440, 6, 0, 786441, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 6, 0, 786465, 6, 0, 786466, 6, 0, 786467, 6, 0, 786468, 6, 0, 786469, 6, 0, 786470, 6, 0, 786471, 6, 0, 786472, 6, 0, 786492, 5, 0, 786493, 5, 0, 851968, 6, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 6, 0, 851989, 6, 0, 851990, 6, 0, 851991, 6, 0, 851992, 6, 0, 851993, 6, 0, 851994, 6, 0, 851995, 6, 0, 851996, 6, 0, 851997, 6, 0, 851998, 6, 0, 851999, 6, 0, 852000, 6, 0, 852001, 6, 0, 852002, 6, 0, 852003, 6, 0, 852004, 6, 0, 852005, 6, 0, 852006, 6, 0, 852007, 6, 0, 852008, 6, 0, 852009, 6, 0, 852010, 6, 0, 852011, 6, 0, 852012, 6, 0, 852013, 6, 0, 852014, 6, 0, 852015, 6, 0, 852016, 6, 0, 852017, 6, 0, 852018, 6, 0, 983039, 6, 0, 917504, 6, 0, 917505, 6, 0, 917506, 6, 0, 917507, 6, 0, 917508, 6, 0, 917509, 6, 0, 917510, 6, 0, 917511, 6, 0, 917512, 6, 0, 917513, 6, 0, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 917523, 6, 0, 917524, 6, 0, 917525, 6, 0, 917526, 6, 0, 917527, 6, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 6, 0, 917532, 6, 0, 917533, 6, 0, 917534, 6, 0, 917535, 6, 0, 917536, 6, 0, 917537, 6, 0, 917538, 6, 0, 917539, 6, 0, 917540, 6, 0, 917541, 6, 0, 917542, 6, 0, 917543, 6, 0, 917544, 6, 0, 917545, 6, 0, 917546, 6, 0, 917547, 6, 0, 917548, 6, 0, 917549, 6, 0, 917550, 6, 0, 917551, 6, 0, 917552, 6, 0, 917553, 6, 0, 917554, 6, 0, 917555, 6, 0, 917556, 6, 0, 917557, 6, 0, 917558, 6, 0, 917559, 6, 0, 917560, 6, 0, 917561, 6, 0, 917562, 6, 0, 917563, 6, 0, 917564, 6, 0, 917565, 6, 0, 917566, 6, 0, 917567, 6, 0, 917568, 6, 0, 917569, 6, 0, 917570, 6, 0, 917571, 6, 0, 917572, 6, 0, 917573, 6, 0, 917574, 6, 0, 917575, 6, 0, 917576, 6, 0, 917577, 6, 0, 917578, 6, 0, 917579, 6, 0, 917580, 6, 0, 917581, 6, 0, 917582, 6, 0, 917583, 6, 0, 917584, 6, 0, 917585, 6, 0, 917586, 6, 0, 917587, 6, 0, 917588, 6, 0, 917589, 6, 0, 917590, 6, 0, 917591, 6, 0, 917592, 6, 0, 917593, 6, 0, 917594, 6, 0, 917595, 6, 0, 917596, 6, 0, 917597, 6, 0, 917598, 6, 0, 917599, 6, 0, 917600, 6, 0, 917601, 6, 0, 917602, 6, 0, 917603, 6, 0, 917604, 6, 0, 917605, 6, 0, 917606, 6, 0, 917607, 6, 0, 917608, 6, 0, 917609, 6, 0, 917610, 6, 0, 1048575, 6, 0, 983040, 6, 0, 983041, 6, 0, 983042, 6, 0, 983043, 6, 0, 983044, 6, 0, 983045, 6, 0, 983046, 6, 0, 983047, 6, 0, 983048, 6, 0, 983049, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983058, 6, 0, 983059, 6, 0, 983060, 6, 0, 983061, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 983072, 6, 0, 983073, 6, 0, 983074, 6, 0, 983075, 6, 0, 983076, 6, 0, 983077, 6, 0, 983078, 6, 0, 983079, 6, 0, 983080, 6, 0, 983081, 6, 0, 983082, 6, 0, 983083, 6, 0, 983084, 6, 0, 983085, 6, 0, 983086, 6, 0, 983087, 6, 0, 983088, 6, 0, 983089, 6, 0, 983090, 6, 0, 983091, 6, 0, 983092, 6, 0, 983093, 6, 0, 983094, 6, 0, 983095, 6, 0, 983096, 6, 0, 983097, 6, 0, 983098, 6, 0, 983099, 6, 0, 983100, 6, 0, 983101, 6, 0, 983102, 6, 0, 983103, 6, 0, 983104, 6, 0, 983105, 6, 0, 983106, 6, 0, 983107, 6, 0, 983108, 6, 0, 983109, 6, 0, 983110, 6, 0, 983111, 6, 0, 983112, 6, 0, 983113, 6, 0, 983114, 6, 0, 983115, 6, 0, 983116, 6, 0, 983117, 6, 0, 983118, 6, 0, 983119, 6, 0, 983120, 6, 0, 983121, 6, 0, 983122, 6, 0, 983123, 6, 0, 983124, 6, 0, 983125, 6, 0, 983126, 6, 0, 983127, 6, 0, 983128, 6, 0, 983129, 6, 0, 983130, 6, 0, 983131, 6, 0, 983132, 6, 0, 983133, 6, 0, 983134, 6, 0, 983135, 6, 0, 983136, 6, 0, 983137, 6, 0, 983138, 6, 0, 983139, 6, 0, 983140, 6, 0, 983141, 6, 0, 983142, 6, 0, 983143, 6, 0, 983144, 6, 0, 983145, 6, 0, 983146, 6, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 32, 40 )
z_index = -10
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="StateMachine" type="Node" parent="Player"]
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 14 )

[node name="BigSprite" type="Sprite" parent="Player"]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 15 )

[node name="SmallShape" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -0.9 )
shape = SubResource( 10 )

[node name="BigShape" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -9 )
shape = SubResource( 11 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 6 )
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = -8
limit_bottom = 216

[node name="SmallJump" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 18 )

[node name="BigJump" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 16 )

[node name="AudioStun" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 17 )

[node name="AnimationWrapper" type="Node2D" parent="Player"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/AnimationWrapper"]
anims/dead = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/slide = SubResource( 15 )
anims/stun = SubResource( 16 )
anims/warp = SubResource( 17 )
anims/warp_right = SubResource( 18 )

[node name="StunTimer" type="Timer" parent="Player"]
wait_time = 3.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 120, 129.495 )
texture = ExtResource( 13 )
[connection signal="timeout" from="Player/StunTimer" to="Player" method="_on_StunTimer_timeout"]
